hw1/data-vilij/resources/css/chart.css
.chart{
    -fx-vertical-grid-lines-visible: false;
    -fx-horizontal-grid-lines-visible: false;
    -fx-vertical-zero-line-visible: false;
    -fx-horizontal-zero-line-visible: false;
    
}
.chart-plot-background {
    -fx-border-color: black; 
    -fx-border-style: solid; 
    -fx-border-width: 4px; 
    -fx-border-insets: -2 -2 0 0;
}
/*.chart-symbol { 
    -fx-background-radius: 5px;
    -fx-padding: 5px;
}*/

.chart-series-line{
    -fx-stroke:transparent;
}

#averageY.chart-series-line{
    -fx-stroke: #B22222;
}

.axis{
    -fx-tick-length: 20;
    -fx-minor-tick-length: 10;
    -fx-tick-label-fill: brown;
}
.axis-tick-mark {
    -fx-stroke: forestgreen;
    -fx-stroke-width: 3; 
}
.axis-minor-tick-mark {
    -fx-stroke: grey;
}

#listheading{
     -fx-background-color: black;
     -fx-padding: 5 10 5 5;
     -fx-text-fill: white;
     -fx-font-weight: bold;
}

#algoTitle{
    -fx-font-color: green;
}

.settings-button{
    /*-fx-border-color: transparent;*/
    -fx-border-width: 0;
    -fx-background-radius: 0;
    -fx-background-color: transparent;
}
.settings-button:focused{
    
    -fx-border-color: transparent;
    -fx-border-width: 0.1, 0.1;
    -fx-border-radius: 0, 0;
}

